# Agentia_World_Projects

./: README.md
chainlit_hello/: .env  pyproject.toml
chainlit_hello/src/chainlit_hello/: script.py
my-app/src/app/: page.tsx
pro/: README.md  pyproject.toml
pro/src/pro/: main.py
pro/src/pro/api/: main.py
pro/src/pro/crews/agentic_flow/: agent_crew.py
pro/src/pro/crews/agentic_flow/config/: agents.yaml  tasks.yaml
pro/src/pro/typings/crewai/: project.pyi
