[project]
name = "chainlit-hello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.4.1",
    "openai-agents>=0.0.4",
]

[project.scripts]
chainlit-hello = "chainlit_hello:main"
dev = "chainlit_hello.script:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
