[project]
name = "pro"
version = "0.1.0"
description = "pro using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
kickoff = "pro.main:kickoff"
agentic_flow = "pro.main:run_agentia_flow"
plot = "pro.main:plot"
serve = "uvicorn pro.api.main:app --reload"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
